-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.5.2
-
None
-
-
74fb2519e (dev), f76ee96e5 (6.6), 926662731 (6.5), ed03dd0bb (tqtc/lts-6.2)
I just see such crashes among our users crash reports.
Unfortunately it's not reproduced for me locally, so I have no much details, sorry.
Unhandled exception at 0x00007FFAD029676D (Qt6Network.dll) in minidump (40).dmp: 0xC0000005: Access violation reading location 0x0000000000000000.
Call stack:
> Qt6Network.dll!QNetworkReplyHttpImplPrivate::loadFromCacheIfAllowed(QHttpNetworkRequest & httpRequest) Line 509 C++ Qt6Network.dll!QNetworkReplyHttpImplPrivate::postRequest(const QNetworkRequest & newHttpRequest) Line 696 C++ [Inline Frame] Qt6Network.dll!QNetworkReplyHttpImplPrivate::_q_startOperation() Line 1869 C++ Qt6Network.dll!QNetworkReplyHttpImpl::QNetworkReplyHttpImpl(QNetworkAccessManager * const manager, const QNetworkRequest & request, QNetworkAccessManager::Operation & operation, QIODevice * outgoingData) Line 216 C++ Qt6Network.dll!QNetworkAccessManager::createRequest(QNetworkAccessManager::Operation op, const QNetworkRequest & originalReq, QIODevice * outgoingData) Line 1240 C++ Viber.exe!NetworkManager::createRequest(QNetworkAccessManager::Operation op, const QNetworkRequest & originalReq, QIODevice * outgoingData) Line 100 C++ Viber.exe!QmlNetworkAccessManager::createRequest(QNetworkAccessManager::Operation op, const QNetworkRequest & originalReq, QIODevice * outgoingData) Line 75 C++ Qt6Network.dll!QNetworkAccessManager::get(const QNetworkRequest & request) Line 779 C++ Qt6Quick.dll!QQuickPixmapReader::processJob(QQuickPixmapReply * runningJob, const QUrl & url, const QString & localFile, QQmlImageProviderBase::ImageType imageType, const QSharedPointer<QQuickImageProvider> & provider) Line 984 C++ Qt6Quick.dll!QQuickPixmapReader::processJobs() Line 782 C++ Qt6Quick.dll!QQuickPixmapReaderThreadObject::event(QEvent * e) Line 686 C++ Qt6Widgets.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3289 C++ Qt6Widgets.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3241 C++ Qt6Core.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 1118 C++ [Inline Frame] Qt6Core.dll!QCoreApplication::sendEvent(QObject *) Line 1536 C++ Qt6Core.dll!QCoreApplicationPrivate::sendPostedEvents(QObject * receiver, int event_type, QThreadData * data) Line 1898 C++ Qt6Core.dll!QEventDispatcherWin32::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 464 C++ [Inline Frame] Qt6Core.dll!QEventLoop::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag>) Line 100 C++ Qt6Core.dll!QEventLoop::exec(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 182 C++ Qt6Core.dll!QThread::exec() Line 578 C++ Qt6Quick.dll!QQuickPixmapReader::run() Line 1078 C++ Qt6Core.dll!QThreadPrivate::start(void * arg) Line 292 C++ kernel32.dll!BaseThreadInitThunk() Unknown ntdll.dll!RtlUserThreadStart() Unknown
For Gerrit Dashboard: QTBUG-116788 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
502157,5 | QNetworkReply: fix potential nullptr access in loadFromCacheIfAllowed() | dev | qt/qtbase | Status: MERGED | +2 | 0 |
502309,2 | QNetworkReply: fix potential nullptr access in loadFromCacheIfAllowed() | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
502310,2 | QNetworkReply: fix potential nullptr access in loadFromCacheIfAllowed() | 6.5 | qt/qtbase | Status: MERGED | +2 | 0 |
502311,2 | QNetworkReply: fix potential nullptr access in loadFromCacheIfAllowed() | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |